# redox-compositor

./: Cargo.toml  structure.md
client/src/: frame.rs  hex.rs  serialise.rs
cursor/: cursor.rs  main.rs  scheme.rs
examples/: client.rs  cursor.rs  display.rs  example-plugin.lua  frame.rs  input.rs
examples/plugins/: example3.lua
src/: bin.rs  compositor.rs  config.rs  cursor.rs  desktop.rs  display.rs  frame.rs  io.rs  main.rs  scheme.rs
src/buffer/: mod.rs
src/plugin/: data.rs  mod.rs  plugin.rs
