[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redox-daemon = "0.1"
redox_syscall = "0.3.4"
raqote = { version = "0.8.1", features = [], default-features = false }
euclid = "0.22.7"
rusttype = "0.9.2"
lazy_static = "1.4.0"
rlua = "0.19.4"

[[bin]]
name = "comp"
path = "src/main.rs"
